MyAccount ALL user page readability fixed

--- a/public/css/myAccount.css
+++ b/public/css/myAccount.css
@@ -61,6 +61,7 @@ button {
     padding-top: 24px;
     padding-left: 20px;
     position: relative;
+    display: grid;
 }
 
 .bottom-button {
